Update CalculatorTest.java